<resources>
    <string name="app_name">cRoin</string>


    <!-- Menu items -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_calculations">Calculations</string>
    <string name="title_currency">Currency</string>
    <string name="title_historical">History</string>
    <string name="title_home">Home</string>
    <string name="title_identifier">Identification</string>
    <string name="title_language">Language</string>


    <!-- FRAGMENTS -->
    <!-- Home fragment -->
    <string name="identify_button_description">Go to currency identification</string>
    <string name="start_identifcation">Click me to start!</string>

    <!-- Currency fragment -->
    <string name="add_currency_button_description">Click to add a new currency</string>
    <string name="add_title">Add Currency</string>
    <string name="spinner_title">Add Currency</string>
    <string name="spinner_description">Add new currency</string>
    <string name="added_currency_description">Currency added</string>
    <string name="fav_description">Favourite currency</string>
    <string name="not_fav_description">Favourite currency</string>
    <string name="delete_button">Delete currency</string>
    <string name="dialog_add_title">Add currency</string>
    <string name="dialog_add_description">Are you sure to add </string>
    <string name="dialog_delete_title">Delete currency</string>
    <string name="dialog_delete_description">Are you sure to delete </string>
    <string name="dialog_fav_title">Favourite</string>
    <string name="dialog_fav_description">Are you sure to change favourite state from </string>

    <!-- History fragment -->
    <string name="date_name">Date</string>
    <string name="date_content_description">Register date</string>
    <string name="quantity_name">Quantity detected</string>
    <string name="value">Value: </string>
    <string name="dialog_open_location">Location</string>
    <string name="dialog_open_location_description">Do you want to open this location with Google Maps?</string>

    <!-- ACTIVITIES -->
    <!-- Splash Screen -->
    <string name="splash_description">Splash cRoin logo</string>

    <!-- Ifentify Activity -->
    <string name="title_activity_identify">IdentifyActivity</string>
    <string name="capture_description">Captured image from camera</string>
    <string name="identified_description">Value identified</string>
    <string name="not_found">Currency not found</string>
    <string name="value_identified">Identified value</string>
    <string name="currency_exchange">Currency exchange</string>
    <string name="no_currency_exchange">Currency not found</string>
    <string name="identification_name">Name</string>
    <string name="identification_name_description">Name of identification</string>
    <string name="identification_comment">Comment</string>
    <string name="identification_comment_description">Comment of identification</string>
    <string name="button_location_description">Get your location</string>
    <string name="toolbar_save_item">Save</string>
    <string name="dialog_location_title">Location</string>
    <string name="dialog_location_description">Grand permissions to allow application get access to you location</string>
    <string name="location_saved">You location has been saved!</string>
    <string name="identify_saved">You recognition has been saved correctly.</string>

    <!-- Camera Activiy -->
    <string name="total_identified_text">0.00 €</string>
    <string name="total_identified_description">Show total identified</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="dialog_capture_title">Take picture</string>
    <string name="dialog_capture_description">Are you sure to take the picture of this detection?</string>

    <!-- DIALOG GENERIC -->
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_yes">SÍ</string>

    <!-- OTHER -->
    <string name="under_construction">Under construction</string>

    <!-- Permissons -->
    <string name="permission_denied">Permission denied</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="request_permission">This sample needs camera permission.</string>

</resources>


