<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".CameraActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTotalIdentified"
            android:layout_width="121dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/total_identified_description"
            android:paddingLeft="20dp"
            android:text="@string/total_identified_text"
            android:textColor="@color/colorWhite"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/ibCapture" />

        <ImageButton
            android:id="@+id/ibCapture"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="67dp"
            android:layout_height="53dp"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/capture_description"
            android:elevation="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camera_solid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>

